@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: rbtdb.c,v 1.248.12.6 2008/04/03 06:10:19 marka Exp $ */
+/* $Id: rbtdb.c,v 1.248.12.7 2008/04/23 21:43:58 each Exp $ */
 
 /*! \file */
 
@@ -180,10 +180,6 @@ typedef isc_mutex_t nodelock_t;
 #define NODE_WEAKLOCK(l, t)     ((void)0)
 #define NODE_WEAKUNLOCK(l, t)   ((void)0)
 #define NODE_WEAKDOWNGRADE(l)   ((void)0)
-#endif
-
-#ifndef DNS_RDATASET_FIXED
-#define DNS_RDATASET_FIXED 1
 #endif
 
 /*
